--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.js",
-    "build": "ng build",
-    "test": "ng test",
+    "start": "ng serve --ssl --proxy-config proxy.conf.js",
+    "build": "ng build -c prod --output-path ./dist/build-prod/",
+    "hmg": "ng build -c hmg --output-path ./dist/build-hmg/",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.2.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
