--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "~9.0.5",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.5",
